force-app/main/default/objects/ApiSettings__mdt/ApiSettings__mdt.object-meta.xml
<CustomObject>
    <description>Service settings</description>
    <label>ApiSettings</label>
    <pluralLabel>ApiSettings</pluralLabel>
</CustomObject>