force-app/main/default/objects/ApiSettings__mdt/fields/maxRetryCount__c.field-meta.xml
<CustomField>
    <fullName>maxRetryCount__c</fullName>
    <defaultValue>3</defaultValue>
    <label>maxRetryCount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>