force-app/main/default/objects/ApiSettings__mdt/fields/method__c.field-meta.xml
<CustomField>
    <fullName>method__c</fullName>
    <description>GET, POST, PUT, PATCH, DELETE</description>
    <label>method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>