force-app/main/default/objects/ApiSettings__mdt/fields/URLpath__c.field-meta.xml
<CustomField>
    <fullName>URLpath__c</fullName>
    <label>URLpath</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>